--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ classifiers=[
 [dependency-groups]
 dev = [
     "black==25.1.0",
+    "invoke>=2.2.0",
     "isort==6.0.1",
     "mypy==1.17.1",
     "pylint==3.3.7",
@@ -67,7 +68,6 @@ dev = [
     "pytest-cov==6.2.1",
     "pytest-mock==3.14.1",
     "setuptools==80.9.0",
-    "tox==4.28.4",
     "types-python-dateutil~=2.9.0",
     "types-pyyaml~=6.0.12",
     "types-redis~=4.6.0",
