--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -4,27 +4,24 @@ beautifulsoup4==4.12.3
 black==25.1.0
 boto3==1.40.1
 botocore==1.40.1
-cachetools==6.2.0
 cattrs==25.2.0
 certifi==2025.10.5
 cffi==2.0.0 ; platform_python_implementation != 'PyPy'
-chardet==5.2.0
 charset-normalizer==3.4.3
 click==8.1.8 ; python_full_version < '3.10'
 click==8.3.0 ; python_full_version >= '3.10'
-colorama==0.4.6
+colorama==0.4.6 ; sys_platform == 'win32'
 coverage==7.10.7
 cryptography==46.0.2
 dill==0.4.0
-distlib==0.4.0
 exceptiongroup==1.3.0 ; python_full_version < '3.11'
-filelock==3.19.1
 gevent==25.5.1
 gitdb==4.0.12
 gitpython==3.1.45
 greenlet==3.2.4 ; platform_python_implementation == 'CPython'
 idna==3.10
 iniconfig==2.1.0
+invoke==2.2.0
 isort==6.0.1
 jmespath==1.0.1
 mccabe==0.7.0
@@ -40,7 +37,6 @@ pluggy==1.6.0
 pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'
 pygments==2.19.2
 pylint==3.3.7
-pyproject-api==1.9.1
 pytest==8.4.1
 pytest-cov==6.2.1
 pytest-mock==3.14.1
@@ -57,7 +53,6 @@ smmap==5.0.2
 soupsieve==2.8
 tomli==2.2.1 ; python_full_version <= '3.11'
 tomlkit==0.13.3
-tox==4.28.4
 types-cffi==1.17.0.20250915
 types-pyopenssl==24.1.0.20240722
 types-python-dateutil==2.9.0.20250822
@@ -72,6 +67,5 @@ typing-extensions==4.15.0
 url-normalize==2.2.1
 urllib3==1.26.18 ; python_full_version < '3.10'
 urllib3==2.5.0 ; python_full_version >= '3.10'
-virtualenv==20.34.0
 zope-event==6.0
 zope-interface==8.0.1
